# autoicd-python

./: CLAUDE.md  README.md  pyproject.toml
src/autoicd/: __init__.py  client.py  errors.py  types.py
tests/: test_client.py  test_e2e.py
