[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoicd"
version = "0.6.0"
description = "Official Python SDK for the AutoICD API — clinical text to ICD-10-CM and ICD-11 diagnosis codes, powered by AI and medical NLP. Includes ICD-10/ICD-11 crosswalk."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "AutoICD", email = "info@autoicdapi.com" }]
keywords = [
    "icd-10",
    "icd-10-cm",
    "icd-10-api",
    "icd-10-lookup",
    "icd-10-search",
    "icd-10-code",
    "medical-coding",
    "clinical-nlp",
    "diagnosis-codes",
    "ehr",
    "emr",
    "health-tech",
    "medical-billing",
    "revenue-cycle-management",
    "clinical-decision-support",
    "phi-deidentification",
    "hipaa",
    "medical-nlp",
    "snomed-ct",
    "umls",
    "medical-coding-api",
    "icd-11",
    "icd-11-api",
    "icd-10-icd-11-crosswalk",
    "autoicd",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://autoicdapi.com"
Documentation = "https://autoicdapi.com/docs"
Repository = "https://github.com/fcggamou/autoicd-python"
Issues = "https://github.com/fcggamou/autoicd-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/autoicd"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
